Prevent smaller images from being stretched on mobile

--- a/app/assets/stylesheets/shared.scss
+++ b/app/assets/stylesheets/shared.scss
@@ -13,7 +13,7 @@ body { background-image: image-url('hatch_marks.png'); }
 .image { max-width: 600px; }
 
 @media screen and (max-width: $mobile-breakpoint) {
-  .image { width: 100%; }
+  .image { max-width: 100%; }
 }
 
 .environment-banner {
